/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.MarketParticipant.Integration.Model.Protobuf";
import "google/protobuf/timestamp.proto";
import "Protobuf/ActorNumberType.proto";

// Obsolete.
message ActorUpdatedIntegrationEventContract {
  reserved "MarketRoles", "GridAreaIds", "MeteringPointTypes";
  reserved 8, 9, 10;

  string Id = 1;
  string ActorId = 2;
  string ExternalActorId = 3;

  string OrganizationId = 4;
  string ActorNumber = 5;
  int32 Status = 6;

  repeated int32 BusinessRoles = 7;
  repeated ActorMarketRole ActorMarketRoles = 11;
  google.protobuf.Timestamp EventCreated = 12;
  ActorNumberType ActorNumberType = 13;
}

message ActorMarketRole {
  int32 Function = 1;
  repeated ActorGridArea GridAreas = 2;
}

message ActorGridArea {
  string Id = 1;
  repeated string MeteringPointTypes = 2;
}